# TinyJ

./: Array.h  ByteBuffer.h  CMakeLists.txt  Char.h  Class.cpp  Class.h  ClassLoader.cpp  ClassLoader.h  ClassPath.h  CodeReader.h  Descriptor.cpp  Descriptor.h  Endian.h  Heap.cpp  Heap.h  InputStream.h  Instruction.h  LocalTable.h  Number.h  Object.cpp  Object.h  OperandStack.h  Primitive.h  README.md  Reference.h  RuntimeClass.cpp  RuntimeClass.h  Slot.h  StackFrame.h  StaticTable.h  String.h  Type.h  Util.h  Value.cpp  Value.h  Vm.h  main.cpp
